argocd/nextcloud/netpol.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: nextcloud
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: nextcloud
      app.kubernetes.io/instance: nextcloud
      app.kubernetes.io/component: app
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: cilium
            k8s-app: cilium-envoy
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: nextcloud
            k8s:app.kubernetes.io/name: mariadb
            k8s:app.kubernetes.io/instance: nextcloud-mariadb
      toPorts:
        - ports:
            - port: "3306"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: nextcloud
            k8s:app.kubernetes.io/name: redis
            k8s:app.kubernetes.io/instance: nextcloud-redis
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "465"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: nextcloud-mariadb
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: mariadb
      app.kubernetes.io/instance: nextcloud-mariadb
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: nextcloud
            k8s:app.kubernetes.io/name: nextcloud
            k8s:app.kubernetes.io/instance: nextcloud
      toPorts:
        - ports:
            - port: "3306"
              protocol: TCP
  egressDeny:
    - toEntities:
        - world
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: nextcloud-redis
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: redis
      app.kubernetes.io/instance: nextcloud-redis
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: nextcloud
            k8s:app.kubernetes.io/name: nextcloud
            k8s:app.kubernetes.io/instance: nextcloud
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
  egressDeny:
    - toEntities:
        - world
